# test-protocols

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_PATTERNS.md  CHANGELOG.md  CODEBASE_EXPLORATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EXPLORATION_REPORT.md  Home.py  IMPLEMENTATION_CHECKLIST.md  INDEX.md  LICENSE  Makefile  PATTERNS_AND_BEST_PRACTICES.md  PROJECT_INDEX.md  PROJECT_README.md  PVTP-032-hail-impact-test.json  PVTP-033-salt-mist-corrosion-test.json  PVTP-034-ammonia-exposure-test.json  PVTP-035-sand-dust-ingress-test.json  PVTP-036-rain-water-spray-test.json  PVTP-037-wind-load-simulation.json  PVTP-038-snow-load-test.json  PVTP-039-outdoor-exposure-accelerated-weathering.json  QUICKSTART.md  QUICK_PROTOCOL_CREATION_GUIDE.md  QUICK_START.md  README.md  README_APP.md  README_COMPREHENSIVE.md  README_DETAILED.md  README_FIRE001.md  README_LID_LIS.md  (+20 more)
.streamlit/: config.toml  secrets.toml.example
analysis/: __init__.py  analyzer.py  calculations.py  charting.py  lid_001_analysis.py  qc_checker.py  qc_checks.py
analytics/: __init__.py  protocol_analytics.py
api/: __init__.py  analytics.py  main.py
backend/: __init__.py  database.py  protocol_parser.py
components/: __init__.py  analytics_engine.py  auth.py  charts.py  data_traceability.py  forms.py  health_check.py  navigation.py  qr_generator.py  tables.py  visualizations.py
config/: __init__.py  app_config.json  app_config.yaml  config.py  config.yaml  database.py  database.yaml  dev.yaml  development.yaml  genspark_ui_config.yaml  logging.yaml  prod.yaml  production.yaml  protocol_schema.json  protocols_registry.py  pytest.ini  qc_rules.yaml  settings.py  test.yaml
core/: __init__.py  base_protocol.py  models.py  utils.py  validators.py
database/: __init__.py  connection.py  db_config.py  db_manager.py  models.py  schema.sql  session.py
deploy/: docker-compose.yml  setup.sh  start_services.sh  stop_services.sh
docs/: ADMIN_GUIDE.md  API.md  API_Documentation.md  API_REFERENCE.md  ARCHITECTURE.md  BYPASS-001-implementation.md  CHALK-001_User_Guide.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  DOCKER_DEPLOYMENT.md  GETTING_STARTED.md  Getting-Started.md  INSTALLATION.md  INTEGRATION_GUIDE.md  Installation_Guide.md  MASTER_README.md  NOCT-001_USER_GUIDE.md  PROTOCOLS.md  PROTOCOL_CATALOG.md  PROTOCOL_DEVELOPMENT.md  PROTOCOL_MAPPING.csv  QA_PROCEDURES.md  QUICKSTART.md  README.md  SAND-001-README.md  SEAL-001-protocol-guide.md  SPEC-001.md  SPONGE-001-Protocol-Guide.md  TECHNICAL_DOCUMENTATION.md  TESTING_GUIDE.md  TRACEABILITY_MATRIX.md  TROP-001_USER_GUIDE.md  TWIST-001_Module_Twist_Test.md  USAGE.md  USER_MANUAL.md  UVID-001_PROTOCOL.md  VIDEO_TUTORIAL_SCRIPTS.md  WET-001.md  WIND-001.md  WORKFLOW_GUIDE.md  (+11 more)
examples/: basic_spectral_response.py  batch_testing.py  database_integration.py
frontend/: streamlit_app.py
genspark_app/: __init__.py  app.py  config.py
handlers/: equipment_scheduler.py  incoming_inspection_handler.py  service_request_handler.py
integrations/: __init__.py  database.py
migrations/: 001_initial_setup.py  schema_uv001.sql
models/: __init__.py  analysis.py  audit.py  base.py  car.py  checklist.py  entity.py  nc_ofi.py  protocol.py  sample.py  test.py  user.py
monitoring/: __init__.py  alerts.py  metrics.py  monitor.py
notifications/: __init__.py  notification_manager.py
pages/: 01_Service_Request.py  01_🏢_Entity_Management.py  02_Incoming_Inspection.py  02_📋_Audit_Planning.py  03_Equipment_Planning.py  03_✅_Audit_Execution.py  04_Protocol_Selector.py  04_⚠️_NC_OFI_Tracking.py  05_PVTP-001.py  05_🔧_Corrective_Actions.py  06_PVTP-002.py  06_📊_Reports_Analytics.py  07_PVTP-003.py  07_⚙️_Admin_Panel.py  08_PVTP-004.py  09_PVTP-005.py  10_INSU-001.py  2_📋_Service_Request.py  3_📦_Incoming_Inspection.py  4_⚙️_Equipment_Booking.py  5_🔬_Test_Protocols.py  80_Master_Dashboard.py  81_Traceability.py  82_QA_Dashboard.py  83_Analytics.py  84_Reports.py  Dashboard.py  KPI_Dashboard.py  QA_Dashboard.py  Reports.py  Traceability.py
protocols/: ENER-001.json  HAIL-001.json  SAND-001.json  SPEC-001.json  __init__.py  base.py  base_protocol.py  handler.py  loader.py  models.py  protocol_schema.json  registry.py  schema.json  schema.py
reports/: __init__.py  generator.py
schemas/: equipment.json  measurement.json  protocol-schema.json  protocol_base.json  protocol_schema.json  step_base.json  track_001_schema.json  tracker-schema.json
scripts/: init_database.py  init_db.py  setup_database.py  setup_db.py
search/: __init__.py  search_engine.py
shared/: __init__.py
src/: __init__.py  master_orchestrator.py
streamlit_app/: __init__.py  app.py  main.py
templates/: base_protocol_schema.json  bypass_diode.json  damp_heat.json  hot_spot.json  humidity_freeze.json  lid_lis_stabilization.json  mechanical_load.json  pid_testing.json  sample_iv_curve_protocol.json  thermal_cycling.json  uv_exposure.json
test_data/: __init__.py  edge_case_generator.py  measurement_generator.py  protocol_generator.py
tests/: __init__.py  conftest.py  test_analysis.py  test_audit_flow.py  test_backsheet_chalking.py  test_core.py  test_database.py  test_executor.py  test_lic_001.py  test_models.py  test_nc_tracking.py  test_protocol.py  test_protocol_loader.py  test_protocol_validation.py  test_protocols.py  test_sand_dust_protocol.py  test_wind_001.py  test_workflow.py
traceability/: traceability_engine.py
ui/: __init__.py  app.py  components.py  genspark.py  pages.py  parameter_input.py  protocol_selector.py  results_display.py  streamlit_app.py
user_manuals/: PVTP-001_STC_Power_User_Manual.md
utils/: __init__.py  calculations.py  config.py  data_generator.py  data_validation.py  excel_export.py  formatters.py  helpers.py  logging.py  logging_config.py  pdf_generator.py  protocol_verifier.py  report_generator.py  validators.py  visualization.py
validators/: __init__.py  compliance_validator.py  cross_field_validator.py  data_validator.py  range_validator.py  (+1 more)
(+976 files in other folders)
